--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="card-body">
-    <frmdb-form_item [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
-      [formReadOnly]="formReadOnly"></frmdb-form_item>
+    <div frmdb-form_item [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
+      [formReadOnly]="formReadOnly"></div>
   </div>
 </div>
