--- a/fe/src/app/components/form_tabs/form_tabs.component.html
+++ b/fe/src/app/components/form_tabs/form_tabs.component.html
@@ -1,8 +1,8 @@
 <ngb-tabset>
   <ngb-tab *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index" [title]="tabNames[idx]">
     <ng-template ngbTabContent>
-      <frmdb-form_item [nodeElement]="nodeElement.childNodes[0]" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
-        [formReadOnly]="formReadOnly"></frmdb-form_item>
+      <div frmdb-form_item [nodeElement]="nodeElement.childNodes[0]" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
+        [formReadOnly]="formReadOnly"></div>
     </ng-template>
   </ngb-tab>
 </ngb-tabset>
