--- a/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
+++ b/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
@@ -1,12 +1,13 @@
 <label [for]="parentFormPath + '.' + inputElement.propertyName" *ngIf="!inputElement.noLabel">
     {{inputElement.refEntityName | i18n}}/{{inputElement.refPropertyName | i18n}}
 </label>
-<input [id]="parentFormPath" class="form-control" [type]="text" [name]="parentFormPath" 
+<input [id]="parentFormPath" class="form-control" type="text" [name]="parentFormPath" 
     [formControl]="topLevelFormGroup.get(parentFormPath)"
     *ngIf="hasControl(parentFormPath)" frmdb-on_focus 
-    [attr.list]="parentFormPath + '.' + inputElement.propertyName+'.list'"
-    (input)="inputChange($event.target.value)" (blur)="inputLeave($event.target.value)"
+    [attr.list]="parentFormPath + '.list'"
+    (input)="text$.next($event.target.value)"
+    (blur)="selectOption($event.target.value)"
 />
-<datalist [id]="parentFormPath + '.' + inputElement.propertyName+'.list'">
-    <option *ngFor="let option of options">{{option}}</option>
+<datalist [id]="parentFormPath + '.list'">
+    <option *ngFor="let option of formatedStrOptions">{{option}}</option>
 </datalist>
