--- a/fe/src/app/components/v_layout/v_layout.component.html
+++ b/fe/src/app/components/v_layout/v_layout.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngFor="let childEl of nodeElement.childNodes">
   <drop-handle position="before" [item]="childEl" orientation="horizontal"></drop-handle>
-  <frmdb-form_item class="flex-fill" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
-    [formReadOnly]="formReadOnly"></frmdb-form_item>
+  <div frmdb-form_item class="flex-fill" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
+    [formReadOnly]="formReadOnly"></div>
 </ng-container>
 <drop-handle position="append" *ngIf="nodeElement.childNodes" [item]="nodeElement" orientation="horizontal"></drop-handle>
