--- a/fe/src/app/components/form_item/form_item.component.html
+++ b/fe/src/app/components/form_item/form_item.component.html
@@ -14,7 +14,7 @@
     [parentFormPath]="parentFormPath" [formReadOnly]="formReadOnly"></frmdb-form_autocomplete>
   <frmdb-form_input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
     [formReadOnly]="formReadOnly"></frmdb-form_input>
-  <frmdb-form_text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+  <frmdb-form_text *ngSwitchCase="'form_text'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
     [formReadOnly]="formReadOnly"></frmdb-form_text>
   <frmdb-form_datepicker *ngSwitchCase="'form_datepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></frmdb-form_datepicker>
