--- a/fe/src/app/components/form_text/form_text.component.html
+++ b/fe/src/app/components/form_text/form_text.component.html
@@ -1,1 +1,3 @@
 <a [href]="value" *ngIf="representation == 'link'" target="_blank">{{value}}</a>
+<span *ngIf="representation == '_id'">{{value}}</span>
+<span *ngIf="representation == 'string'">{{value}}</span>
