autocomplete table with all related referenced properties

--- a/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
+++ b/fe/src/app/components/form_autocomplete/form_autocomplete.component.html
@@ -1,13 +1,26 @@
-<label [for]="parentFormPath + '.' + inputElement.propertyName" *ngIf="!inputElement.noLabel">
+<label [for]="parentFormPath" *ngIf="!inputElement.noLabel">
     {{inputElement.refEntityName | i18n}}/{{inputElement.refPropertyName | i18n}}
 </label>
-<input [id]="parentFormPath" class="form-control" type="text" [name]="parentFormPath" 
-    [formControl]="topLevelFormGroup.get(parentFormPath)"
-    *ngIf="hasControl(parentFormPath)" frmdb-on_focus 
-    [attr.list]="parentFormPath + '.list'"
+<input #input [id]="parentFormPath" class="form-control" type="text" [name]="parentFormPath" autocomplete="off"
+    *ngIf="hasControl(parentFormPath)"
+    [formControl]="control"
     (input)="text$.next($event.target.value)"
-    (blur)="selectOption($event.target.value)"
 />
-<datalist [id]="parentFormPath + '.list'">
-    <option *ngFor="let option of formatedStrOptions">{{option}}</option>
-</datalist>
+
+<table [class.visible]="popupOpened" class="frmdb-autocomplete_popup table table-striped table-sm">
+    <thead>
+        <tr>
+            <th *ngFor="let relatedCtrl of relatedControls">
+                {{relatedCtrl.refPropertyName | i18n}}
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let option of autoCompleteState?.options" (click)="selectOption(option)">
+            <td *ngFor="let relatedCtrl of relatedControls">
+                <span *ngIf="relatedCtrl.propertyName === inputElement.propertyName" [innerHtml]="highlightOption(option)"></span>
+                <span *ngIf="relatedCtrl.propertyName !== inputElement.propertyName">{{option[relatedCtrl.propertyName]}}</span>
+            </td>
+        </tr>
+    </tbody>
+</table>
