--- a/fe/src/app/components/form_autocomplete/form_autocomplete.component.scss
+++ b/fe/src/app/components/form_autocomplete/form_autocomplete.component.scss
@@ -18,6 +18,10 @@
     cursor: pointer;
 }
 
+.frmdb-autocomplete_popup td.selected {
+    background-color: lightblue;
+}
+
 .frmdb-autocomplete_popup.visible {
     display: block;
 }
