--- a/fe/src/app/components/h_nav/h_nav.component.html
+++ b/fe/src/app/components/h_nav/h_nav.component.html
@@ -3,27 +3,25 @@
     <!-- <a class="navbar-brand" href="#pablo">
       {{ (selectedEntity$ | async)?._id | i18n }}
     </a> -->
-    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-bar burger-lines"></span>
       <span class="navbar-toggler-bar burger-lines"></span>
       <span class="navbar-toggler-bar burger-lines"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
-          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="TopNavSettings" ngbDropdownToggle
-            aria-haspopup="true" aria-expanded="false">
-            <!-- <span class="notification">2</span> -->
-            <span class="no-icon"><i class="nc-icon nc-settings-gear-64"></i></span>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
-            <a class="dropdown-item" href="javascript:void(0)">Notification 1</a>
-            <a class="dropdown-item" href="javascript:void(0)">Notification 2</a>
-            <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="nc-icon nc-circle-09"></i>Account</a>
-          </div>
-        </li>
+        <ng-container *ngFor="let navItem of navigationItemsTree">
+          <li><a [routerLink]="[navItem.path]">{{navItem.linkName | i18n }}</a></li>
+          <li *ngIf="navItem.children.length > 0" class="nav-item dropdown" ngbDropdown placement="bottom-right">
+              <a class="nav-link dropdown-toggle" href="javascript:void(0)" 
+                ngbDropdownToggle aria-haspopup="true" aria-expanded="false"></a>
+              <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
+                <a *ngFor="let childNavItem of navItem.children" class="dropdown-item" 
+                  [routerLink]="[childNavItem.path]">{{childNavItem.linkName | i18n }}</a>
+              </div>
+            </li>
+        </ng-container>
       </ul>
     </div>
   </div>
