--- a/fe/src/app/components/h_nav/h_nav.component.html
+++ b/fe/src/app/components/h_nav/h_nav.component.html
@@ -1,28 +1,36 @@
 <nav class="navbar navbar-expand-lg " color-on-scroll="500">
-  <div class=" container-fluid  ">
-    <!-- <a class="navbar-brand" href="#pablo">
-      {{ (selectedEntity$ | async)?._id | i18n }}
-    </a> -->
-    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-bar burger-lines"></span>
-      <span class="navbar-toggler-bar burger-lines"></span>
-      <span class="navbar-toggler-bar burger-lines"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navigation">
-      <ul class="navbar-nav ml-auto">
-        <ng-container *ngFor="let navItem of navigationItemsTree">
-          <li><a [routerLink]="[navItem.path]">{{navItem.linkName | i18n }}</a></li>
-          <li *ngIf="navItem.children.length > 0" class="nav-item dropdown" ngbDropdown placement="bottom-right">
-              <a class="nav-link dropdown-toggle" href="javascript:void(0)" 
-                ngbDropdownToggle aria-haspopup="true" aria-expanded="false"></a>
-              <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
-                <a *ngFor="let childNavItem of navItem.children" class="dropdown-item" 
-                  [routerLink]="[childNavItem.path]">{{childNavItem.linkName | i18n }}</a>
-              </div>
-            </li>
-        </ng-container>
-      </ul>
+    <div class=" container-fluid  ">
+        <!-- <a class="navbar-brand" href="#pablo">
+            {{ (selectedEntity$ | async)?._id | i18n }}
+        </a> -->
+        <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar burger-lines"></span>
+            <span class="navbar-toggler-bar burger-lines"></span>
+            <span class="navbar-toggler-bar burger-lines"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="nav navbar-nav navbar-right">
+                <ng-container *ngFor="let navItem of navigationItemsTree">
+                    <li *ngIf="!navItem.isPureNavGroupingChildren"><a [routerLink]="[navItem.path]">{{navItem.linkName | i18n }}</a></li>
+                    <li *ngIf="navItem.isPureNavGroupingChildren" class="nav-item dropdown" ngbDropdown placement="bottom-right">
+                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" 
+                        ngbDropdownToggle aria-haspopup="true" aria-expanded="false">{{navItem.linkName | i18n }}</a>
+                        <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
+                            <a *ngFor="let childNavItem of navItem.children" class="dropdown-item" 
+                            [routerLink]="[childNavItem.path]">{{childNavItem.linkName | i18n }}</a>
+                        </div>
+                    </li>
+                </ng-container>
+                <li ngbDropdown placement="bottom-right">
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0)" ngbDropdownToggle aria-haspopup="true" aria-expanded="false">
+                        <fa-icon [icon]="userIcon"></fa-icon>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
+                        <a class="dropdown-item" href="javascript:void(0)">{{'Logout' | i18n }}</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
