--- a/fe/src/app/themes/light-theme/layout/light-bootstrap-dashboard.scss
+++ b/fe/src/app/themes/light-theme/layout/light-bootstrap-dashboard.scss
@@ -40,6 +40,7 @@
 @import "./lbd/chartist";
 @import "./lbd/responsive";
 @import "./lbd/bootstrap-switch";
+@import "./lbd/landing";
 
 // Nucleo Icons
 @import "./lbd/partial-nucleo-icons";
