fix layout not rendering

--- a/fe/src/app/themes/light-theme/layout/layout.component.html
+++ b/fe/src/app/themes/light-theme/layout/layout.component.html
@@ -1,4 +1,9 @@
-<div *ngIf="layout == 'landing'"  class="header-wrapper frmdb-layout">
+<div *ngIf="layout == null" class="header-wrapper frmdb-layout">
+    <div class="header" style="background-image: url('/assets/img/banner/full-screen-image-3.jpg');">
+        <div class="filter"></div>
+    </div>
+</div>
+<div *ngIf="layout == 'landing'" class="header-wrapper frmdb-layout">
     <nav class="navbar navbar-transparent navbar-fixed-top" role="navigation" color-on-scroll>
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -20,25 +25,21 @@
                     </div>
                 </a>
             </div>
-            
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse">
-                <ul  class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href='https://github.com/creativetimofficial/light-bootstrap-dashboard/issues' target="_blank" id="issueButton" class="btn btn-simple btn-neutral">Have an issue?</a>
-                    </li>
-                </ul>
-                
+                <div class="filter"></div>
+                <frmdb-h_nav></frmdb-h_nav>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    
+
+    <div class="filter"></div>
     <div class="header" style="background-image: url('/assets/img/banner/full-screen-image-3.jpg');">
-        
         <router-outlet></router-outlet>
     </div>
 </div>
-<div *ngIf="layout == null || layout == 'dashboard'" class="wrapper frmdb-layout">
+<div *ngIf="layout == 'dashboard'" class="wrapper frmdb-layout">
     <div class="sidebar" [attr.data-image]="sidebarImageUrl$ | async" [attr.data-color]="(themeColorPalette$ | async) || 'default'">
         <!--
             Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
@@ -54,12 +55,12 @@
             </div>
             <frmdb-v_nav class="nav"></frmdb-v_nav>
         </div>
-        <div class="sidebar-background" [style.background-image]="'url(' + (sidebarImageUrl$ | async) + ')' "></div>      
+        <div class="sidebar-background" [style.background-image]="'url(' + (sidebarImageUrl$ | async) + ')' "></div>
     </div>
     <div class="main-panel">
         <!-- Navbar -->
         <frmdb-h_nav></frmdb-h_nav>
-        
+
         <!-- End Navbar -->
         <div class="content">
             <router-outlet></router-outlet>
@@ -79,8 +80,8 @@
                     ( webdesign &copy; 2018
                     <a style="color: grey" href="http://www.creative-tim.com">Creative Tim</a>,
                     Some icons by <a style="color: grey" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a style="color: grey"
-                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a style="color: grey"
-                    href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+                        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a style="color: grey"
+                        href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                     )
                 </span>
             </p>
