--- a/fe/src/app/components/form_item/form_item.component.html
+++ b/fe/src/app/components/form_item/form_item.component.html
@@ -8,6 +8,8 @@
     [formReadOnly]="formReadOnly"></div>
   <div frmdb-form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
     [formReadOnly]="formReadOnly"></div>
+  <frmdb-card_container *ngSwitchCase="'card_container'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
+    [formReadOnly]="formReadOnly"></frmdb-card_container>
   <div frmdb-form_data_grid *ngSwitchCase="'form_data_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <frmdb-form_autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
@@ -28,6 +30,6 @@
     [formReadOnly]="formReadOnly"></frmdb-v_layout>
   <frmdb-v_layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
     [formReadOnly]="formReadOnly"></frmdb-v_layout>
-  <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
+  <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{nodeElement.nodeType}}' !</div>
 
 </div>
