--- a/fe/src/app/themes/light-theme/layout/_landing.scss
+++ b/fe/src/app/themes/light-theme/layout/_landing.scss
@@ -54,10 +54,14 @@ h2{
 }
 .logo-container .logo{
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 10%;
     border: 1px solid #333333;
-    width: 50px;
+    width: 100px;
     float: left;
+}
+.frmdb-content {
+    position: relative;
+    z-index: 3;
 }
 .header-wrapper {
   position: relative;
@@ -75,7 +79,7 @@ h2{
     z-index: 1;
 }
 .header-wrapper .header .filter::after {
-    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #9368e9 0%, #943bea 100%) repeat scroll 0 0 / 150% 150%;
+    // background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #9368e9 0%, #943bea 100%) repeat scroll 0 0 / 150% 150%;
     content: "";
     display: block;
     height: 450px;
@@ -86,6 +90,32 @@ h2{
     width: 100%;
     z-index: 2;
 }
+
+.header-wrapper .header .filter[data-color="black"]:after{
+    @include icon-gradient($default-states-color, $default-states-color);
+}
+.header-wrapper .header .filter[data-color="blue"]:after{
+    @include icon-gradient($new-dark-blue, $blue-color-bottom);
+}
+.header-wrapper .header .filter[data-color="azure"]:after{
+    @include icon-gradient($new-blue, $azure-color-bottom);
+}
+.header-wrapper .header .filter[data-color="green"]:after{
+    @include icon-gradient($new-green, $green-color-bottom);
+}
+.header-wrapper .header .filter[data-color="orange"]:after{
+    @include icon-gradient($new-orange, $orange-color-bottom);
+}
+.header-wrapper .header .filter[data-color="default"]:after{
+    @include icon-gradient($new-red, $red-color-bottom);
+}
+.header-wrapper .header .filter[data-color="red"]:after{
+    @include icon-gradient($new-red, $red-color-bottom);
+}
+.header-wrapper .header .filter[data-color="purple"]:after{
+    @include icon-gradient($new-purple, $purple-color-bottom);
+}
+
 .header-wrapper .title-container{
     color: #fff;
     position: relative;
@@ -102,6 +132,15 @@ h2{
     margin-top: 5px;
     width: 50px;
     height: 50px;
+}
+
+@media (min-width: 768px) {
+    .navbar-collapse.collapse {
+        display: block!important;
+        height: auto!important;
+        padding-bottom: 0;
+        overflow: visible!important;
+    }
 }
 
 .navbar-default .logo-container .brand{
