added "landing" type of layout to the first theme

--- a/fe/src/app/components/form_text/form_text.component.html
+++ b/fe/src/app/components/form_text/form_text.component.html
@@ -1,5 +1,9 @@
 <a [href]="value" *ngIf="representation == 'link'" target="_blank">{{value}}</a>
 <span *ngIf="representation == '_id'">{{value}}</span>
 <span *ngIf="representation == 'string'">{{value}}</span>
-<h1 *ngIf="representation == 'title'">{{value}}</h1>
+
+<div *ngIf="representation == 'title'"class="text-center">
+    <h1 >{{value}}</h1>
+</div>
+
 <p *ngIf="representation == 'paragraph'">{{value}}</p>
