--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="card-body">
-    <div frmdb-form_item [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath"
+    <div *ngFor="let child of nodeElement.childNodes" frmdb-form_item [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(nodeElement)"
       [formReadOnly]="formReadOnly"></div>
   </div>
 </div>
