--- a/fe/src/app/components/card_prototype/card_container.component.html
+++ b/fe/src/app/components/card_prototype/card_container.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index">
-    <frmdb-card [nodeElement]="nodeElement.childNodes[0]" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
+    <frmdb-card [nodeElement]="cardContainer.cardNode" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
     [formReadOnly]="formReadOnly"></frmdb-card>
 </ng-container>
