mary to bootstap, same html for all themes

--- a/fe/src/app/components/card_prototype/card_container.component.html
+++ b/fe/src/app/components/card_prototype/card_container.component.html
@@ -1,4 +1,6 @@
-<ng-container *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index">
-    <frmdb-card [nodeElement]="cardContainer.cardNode" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
-    [formReadOnly]="formReadOnly"></frmdb-card>
-</ng-container>
+<div class="card-deck">
+    <frmdb-card  *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index"
+        [nodeElement]="cardContainer.cardNode" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
+        [formReadOnly]="formReadOnly">
+    </frmdb-card>    
+</div>
